--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
             <A HREF="http://home.mywebsearch.com" target="_blank">MYWEBSEARCH.COM</A><br/>
             <A HREF="http://search.myway.com/home/index.jhtml" target="_blank">SEARCH.MYWAY.COM</A><br/>
             <A HREF="http://isearch.babylon.com" target="_blank">ISEARCH.BABYLON.COM</A><br/>
-            <A HREF="http://search.creativecommons.org" target="_blank">SEARCH.CREATIVECOMMONS.ORG</A><br/>
+            <A HREF="http://search.creativecommons.org" target="_blank">SEARCH.CREATIVECOMMONS</A><br/>
           </div>
           <div style="background:rgba(30,0,0, 0.7);float:left;padding:5px;width:240px;height:auto;font:13px arial;">
             <b><span style="font:bold 16px arial;background-color:yellow;color:black;">CREATE BLOGS & SITES</span></b><br/>
