--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <meta content='homepage, menu, text document, image, video, data, sound' name='DC.Type'/> 
       <meta content='text/html' name='DC.Format'/> 
       <meta content='el' name='DC.Language'/>    
-<link rel="stylesheet" type="text/css" href="https://demo-7.github.io/my/style.css"/>
+<link rel="stylesheet" type="text/css" href="https://github-codes.github.io/mycodes/style.css"/>
 </head>
 <body>
 <div id="header">
