--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 <a href="https://start.me/p/WqMDRn/sosial-networks" target="_blank"><button style="width:auto; height:28px; background:#333; color:#FFF;  font: 14px Arial;">Sosial networks</button></a>
 <a href="https://start.me/p/W20mG6/html-css-js-codes" target="_blank"><button style="width:auto; height:28px; background:#333; color:#FFF;  font: 14px Arial;">Html css js codes</button></a>
 <a href="https://start.me/p/ZdezYM/widgets-for-blogs" target="_blank"><button style="width:auto; height:28px; background:#333; color:#FFF;  font: 14px Arial;">Widgets for blogs</button></a>
-<a href="https://jsfiddle.net/user/mycodes" target="_blank"><button style="width:auto; height:28px; background:#333; color:#FFF;  font: 14px Arial;">Jsfiddle codes</button></a>
+<a href="https://jsfiddle.net/u/mycodes/fiddles/" target="_blank"><button style="width:auto; height:28px; background:#333; color:#FFF;  font: 14px Arial;">Jsfiddle codes</button></a>
 <a href="https://codepen.io/my-codes" target="_blank"><button style="width:auto; height:28px; background:#333; color:#FFF;  font: 14px Arial;">Codepen codes</button></a>
 <a href="https://www.codeply.com/users/dikefalos" target="_blank"><button style="width:auto; height:28px; background:#333; color:#FFF;  font: 14px Arial;">Codeply codes</button></a>
 </div>
